--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,8 +10,54 @@ services:
     networks:
       net14:
         ipv4_address: 10.0.14.4
+      net16:
+        ipv4_address: 10.0.16.1
+      net19:
+        ipv4_address: 10.0.19.1
+
+
+  r3:
+    build: .
+    stdin_open: true
+    tty: true
+    cap_add:
+      - ALL
+    privileged: true
+    networks:
       net15:
         ipv4_address: 10.0.15.4
+      net18:
+        ipv4_address: 10.0.18.3
+      net17:
+        ipv4_address: 10.0.17.3
+
+  r2:
+    build: .
+    stdin_open: true
+    tty: true
+    cap_add:
+      - ALL
+    privileged: true
+    networks:
+      net16:
+        ipv4_address: 10.0.16.2
+      net17:
+        ipv4_address: 10.0.17.2
+
+  r4:
+    build: .
+    stdin_open: true
+    tty: true
+    cap_add:
+      - ALL
+    privileged: true
+    networks:
+      net18:
+        ipv4_address: 10.0.18.4
+      net19:
+        ipv4_address: 10.0.19.4
+
+
 
   ha:
     build: .
@@ -47,7 +93,23 @@ networks:
       config:
         - subnet: 10.0.15.0/24
 
-
-
-
-
+  net16:
+    ipam:
+      driver: default
+      config:
+        - subnet: 10.0.16.0/24
+  net17:
+    ipam:
+      driver: default
+      config:
+        - subnet: 10.0.17.0/24
+  net18:
+    ipam:
+      driver: default
+      config:
+        - subnet: 10.0.18.0/24
+  net19:
+    ipam:
+      driver: default
+      config:
+        - subnet: 10.0.19.0/24
