--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
     cap_add:
       - ALL
     privileged: true
+    volumes:
+      - ./r1/frr.conf:/etc/frr/frr.conf
     networks:
       net14:
         ipv4_address: 10.0.14.4
@@ -23,6 +25,8 @@ services:
     cap_add:
       - ALL
     privileged: true
+    volumes:
+      - ./r3/frr.conf:/etc/frr/frr.conf
     networks:
       net15:
         ipv4_address: 10.0.15.4
@@ -38,6 +42,8 @@ services:
     cap_add:
       - ALL
     privileged: true
+    volumes:
+      - ./r2/frr.conf:/etc/frr/frr.conf
     networks:
       net16:
         ipv4_address: 10.0.16.2
@@ -51,6 +57,8 @@ services:
     cap_add:
       - ALL
     privileged: true
+    volumes:
+      - ./r4/frr.conf:/etc/frr/frr.conf
     networks:
       net18:
         ipv4_address: 10.0.18.4
