--- a/ha/Dockerfile
+++ b/ha/Dockerfile
@@ -5,4 +5,6 @@ RUN apt-get update && apt-get -y install \
     bash iproute2 net-tools tcpdump vim iputils-ping && \
     apt-get clean
 
-CMD ["bash"]
+COPY reset-defaults.sh /reset-defaults.sh
+RUN chmod +x /reset-defaults.sh
+CMD ["/reset-defaults.sh"]
