put dockerfiles back

--- a/r2/Dockerfile
+++ b/r2/Dockerfile
@@ -22,8 +22,7 @@ RUN sed -i 's/ospfd=no/ospfd=yes/' /etc/frr/daemons
 # Copy initial FRR config (optional, could be per-router config)
 COPY frr.conf /etc/frr/frr.conf
 
-# COPY frr.sh /frr.sh
-# RUN chmod +x /frr.sh
-# ENTRYPOINT ["/frr.sh"] # now done in orchestrator.py
-CMD [\"bash\"] 
+COPY frr.sh /frr.sh
+RUN chmod +x /frr.sh
+ENTRYPOINT ["/frr.sh"]
 
