--- a/r1/Dockerfile
+++ b/r1/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get -y install bash iproute2 net-tools tcpdump vim iputils-ping
 RUN apt-get clean
 
 # add frr and ospf
-RUN curl -s https://deb.frrouting.org/frr/keys.gpg | tee /usr/share/keyrings/frrouting.gpg > /dev/null && 
+RUN curl -s https://deb.frrouting.org/frr/keys.gpg | tee /usr/share/keyrings/frrouting.gpg > /dev/null
 RUN echo "deb [signed-by=/usr/share/keyrings/frrouting.gpg] https://deb.frrouting.org/frr $(lsb_release -s -c) frr-stable" | tee -a /etc/apt/sources.list.d/frr.list
 RUN apt-get update
 RUN apt-get -y install frr frr-pythontools
