--- a/hb/Dockerfile
+++ b/hb/Dockerfile
@@ -1,8 +1,9 @@
+# ha/hb/Dockerfile
 FROM ubuntu
 
-RUN apt-get update
-RUN apt-get -y install bash iproute2 net-tools tcpdump vim iputils-ping
-RUN apt-get clean
+RUN apt-get update && apt-get -y install \
+    bash iproute2 net-tools tcpdump vim iputils-ping && \
+    apt-get clean
 
 COPY reset-defaults.sh /reset-defaults.sh
 RUN chmod +x /reset-defaults.sh
